--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,38 +4,150 @@
 }
 
 body{
-	background-color: #710000;
+	background-color: #4D0400;
 }
 
-article{
-	width: 90%;
+#contenedor{
+	width: 85%;
 	max-width: 1500px;
-	padding: 10px;
-	margin: 60px auto;
-	background-color: #000000;
-	color: #FFFFFF;
-	border-radius: 10px;
-	overflow: hidden;
+	background-color: rgba(141, 8, 0, 0.3);
+	margin: 5px auto;
 }
 
-#info, #formRegistro{
-	width: 50%;
+#logoNav img{
+	width: 78px;
+	height: 70px;
 	float: left;
 }
 
-h3{
+#logoNav p{
 	text-align: center;
-	font-family: Verdana;
+	font-family: "Copperplate Gothic";
+	font-size: 45px;
+	padding: 10px;
+	margin: auto;
+	font-weight: bold;
+	text-shadow: 3px 3px 2px #8D0800;
+}
+
+nav{
+	margin-top: 5px;
+	background-color: #000000;
+	clear: both;
+	overflow: hidden;
+}
+
+nav ul{
+	list-style: none;
+}
+
+nav ul li{
+	float: left;
+}
+
+nav ul li a{
+	display: block;
+	padding: 10px;
+	margin: auto;
+	text-decoration: none;
+	color: #8D0800;
+	font-weight: bolder;
+}
+
+nav ul li a:hover{
+	background-color: #490400;
+	color: white;
+}
+
+article{
+	clear: both;
+}
+
+#bienvenida img{
+	display: block;
+	margin: auto;
+	width: 100%;
+	max-width: 300px;
+	height: auto;
+}
+
+#bienvenida p{
+	text-align: justify;
+	color: #8D0800;
+	font-weight: bolder;
+}
+
+#bienvenida{
+	width: 39.5%;
+	float: left;
+	padding: 10px;
+	background-color: #000000;
+	margin: auto;
+	margin-right: 0.5%;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	box-sizing: border-box;
+}
+
+
+#formRegistro{
+	width: 60%;
+	float: left;
+	padding: 10px;
+	background-color: #000000;
+	margin: 5px 0px 5px 0px;
+	color: #8D0800;
+	box-sizing: border-box;
+}
+
+#formRegistro label, input{
+	display: block;
+}
+
+#formRegistro div{
+	float: left;
+	width: 50%;
 }
 
 footer{
 	clear: both;
-	width: 90%;
-	max-width: 1500px;
-	padding: 10px;
-	margin: auto;
+	background-color: #000000;
+	overflow: hidden;
 }
 
 footer ul{
+	list-style: none;
+	width: 25%;
+	display: block;
+	margin: auto;
 	float: left;
+	box-sizing: border-box;
 }
+
+footer ul li a{
+	display: block;
+	padding: 10px;
+	margin: auto;
+	text-decoration: none;
+	color: #8D0800;
+	font-weight: bolder; 
+}
+
+footer ul li a:hover{
+	background-color: #490400;
+	color: white;
+}
+
+h3{
+	text-align: center;
+	font-family: "Copperplate Gothic";
+	font-size: 20px;
+	padding: 10px;
+	margin: auto;
+	font-weight: bold;
+}
+
+
+
+
+
