--- a/css/estilos.css
+++ b/css/estilos.css
@@ -257,7 +257,6 @@ footer{
 .redesSociales{
 	width: 100%;
 	color: black;
-	height: 90px;
 
 	/*flex*/
 	display: flex;
@@ -275,6 +274,8 @@ footer{
 
 	flex: 1 1;
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 }
