--- a/css/estilos.css
+++ b/css/estilos.css
@@ -300,19 +300,6 @@ footer{
 	display: none;
 }
 
-.despliegueMenu{
-	/*width: 80%;*/
-	z-index: 1;
-
-	/*flex*/
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-}
-
 @media screen and (max-width: 800px) {
 	article{
 		flex-direction: column;
@@ -333,36 +320,80 @@ footer{
 }
 
 @media screen and (max-width: 630px) {
+	#contenedor{
+		width: 100%;
+	}
+
+	body{
+		padding-top: 111px;
+	}
+
+	#logoNav{
+		background-color: #4D0400;
+	}
+
+	header{
+		display: block;
+		position: fixed;
+		width: 100%;
+		top: 0px;
+	}
+
+	#logoNav p{
+		font-size: 32px;
+	}
+
+	nav{
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+		align-content: flex-start;
+		width: 80%;
+		height: 100%;
+		position: fixed;
+		z-index: 3000;
+	}
+
 	.contenedorNav{
-		display: none;
+		width: 100%;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		justify-content: flex-start;
+		align-items: flex-start; 
+		align-content: flex-start;
 	}
 
 	.contenedorLogin{
-		display: none;
+		width: 100%;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		justify-content: flex-start;
+		align-items: flex-start; 
+		align-content: flex-start;
+	}
+
+	.contenedorNav a, .contenedorLogin a{
+		text-align: left;
+		width: 100%;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 	}
 	
-	nav{
-		justify-content: flex-start;
-		align-items: flex-start;
-	}
-
 	.menu{
-		/*flex*/
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: flex-start;
-		align-items: flex-start;
-		align-content: center;
+		display: inline-block;
+		width: 100%;
+		padding: 5px;
+		margin: auto;
+		background-color: black;
 	}
-
-	/*.contenedorMenu{
-		display: none;
-	}*/
 
 	.menu span{
 		font-size: 32px;
 		color: #8D0800;
+		padding: 5px;
+	}
+
+	.menu .icon{
+		float: right;
 	}
 }
 
