--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,16 +5,12 @@
 }
 
 @font-face {
-    font-family: 'Fell Great';
-    src: url('/media/fonts/IMFeGPit28P.ttf') format('truetype');
-}
-
-body{
-	background-color: #4D0400;
+    font-family: 'Kingthings';
+    src: url('../media/fonts/Kingthings_Petrock.ttf');
 }
 
 .fontTitle{
-	font-family: "Fell Great";
+	font-family: "Metal Mania";
 	font-size: 45px;
 }
 
@@ -29,7 +25,7 @@ body{
 }
 
 .fontAlter{
-	font-family: "Neucha";
+	font-family: "Acme";
 	font-size: 16px;
 }
 
@@ -38,71 +34,7 @@ body{
 	font-size: 16px;
 }
 
-#contenedor{
-	width: 85%;
-	max-width: 1500px;
-	background-color: rgba(141, 8, 0, 0.3);
-	margin: 5px auto;
-}
-
-#logoNav img{
-	width: 78px;
-	height: 70px;
-	float: left;
-}
-
-#logoNav p{
-	text-align: center;
-	padding: 10px;
-	margin: auto;
-	font-weight: bold;
-	text-shadow: 3px 3px 2px #8D0800;
-}
-
-header{
-	background-color: #8D0800;
-}
-
-nav{
-	background-color: #000000;
-	clear: both;
-	overflow: hidden;
-	
-	/*flex*/
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	
-	justify-content: space-between;
-	align-items: center;
-	align-content: center;
-}
-
-.contenedorNav{
-	width: 60%;
-
-	/*flex*/
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	align-items: center;
-	align-content: center;
-}
-
-.contenedorLogin{
-	width: 40%;
-
-	/*flex*/
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-end;
-	align-items: center;
-	align-content: center;
-}
-
-.linkNav{
+/*.linkNav{
 	padding: 10px;
 	text-decoration: none;
 	color: #8D0800;
@@ -116,306 +48,8 @@ nav{
 	color: white;
 }
 
-article{
-	width: 100%;
-	margin: 5px auto;
-
-	/*flex*/
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: center;
-}
-
-#bienvenida{
-	width: 50%;
-	padding: 10px;
-	background-color: #000000;
-}
-
-#bienvenida img{
-	display: block;
-	margin: auto;
-	width: 100%;
-	max-width: 300px;
-	height: auto;
-}
-
-#bienvenida p{
-	text-align: justify;
-	color: #8D0800;
-	font-weight: bolder;
-}
-
-#formRegistro{
-	width: 50%;
-	padding: 10px;
-	background-color: #000000;
-	color: #8D0800;
-}
-
-.contenedorForm{
-	width: 100%;
-	max-width: 500px;
-	margin: auto;
-	border-radius: 5px;
-	background-color: rgba(230, 230, 230, 0.1);
-	padding: 7px;
-}
-
-h3{
-	text-align: center;
-	padding: 10px;
-	margin: auto;
-	margin-bottom: 17px;
-	font-weight: bold;
-}
-
-.inputGroup{
-	position: relative;
-	margin-bottom: 32px;
-}
-
-.textbox{
-	display: block;
-	width: 100%;
-	max-width: 450px;
-	background: none;
-	color: white;
-	outline: none;
-	padding: 7px 0px;
-	margin: auto;
-	border: none;
-	border-bottom: 2px solid #8D0800;
-}
-
-.label{
-	display: block;
-	width: 100%;
-	max-width: 450px;
-	margin: auto;
-	position: absolute;
-	top: 3px;
-	left: 16px;
-	font-weight: bold;
-}
-
-.textbox:focus{
-	border-bottom: 2px solid #B9B6B6;
-}
-
-.submit{
-	display: block;
-	width: 100%;
-	max-width: 450px;
-	padding: 10px;
-	margin: auto;
-	border-radius: 5px;
-	color: black;
-	font-weight: bold;
-	background-color: #8D0800;
-	box-shadow: 0px 0px 5px black;
-	border: none;
-}
-
-.contenedorSubmit{
-	padding: 10px;
-	margin: auto;
-}
-
-footer{
-	width: 100%;
-
-	/*flex*/
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-content: center;
-}
-
-.navFooter{
-	width: 100%;
-	background-color: #000000;
-
-	/*flex*/
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: center;
-}
-
-.navFooter div{
-	flex:1 1;
-
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-content: center;
-}
-
-.navFooter div a{
-	width: 100%;
-}
-
-.redesSociales{
-	width: 100%;
-	color: black;
-
-	/*flex*/
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: center;
-}
-
-.redesSociales div{
-	padding: 10px;
-	text-align: center;
-	font-size: 50px;
-
-	flex: 1 1;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-}
-
-.iconAnimation:hover{
-	color: white;
-	font-size: 55px;
-}
-
-.labelActive{
-	top: -8px; 
-	font-size: 10px; 
-	color: white; 
-	transition: all .3s ease;
-}
-
 .icon{
 	margin-right: 10px;
-}
+}*/
 
-.menu{
-	display: none;
-}
-
-.abrir{
-	left: 0px;
-	transition: all 1s ease;
-}
-
-.cerrar{
-	left: -100%;
-	transition: all 1s ease;
-}
-
-@media screen and (max-width: 800px) {
-	article{
-		flex-direction: column;
-		flex-wrap: nowrap;
-	}
-
-	#bienvenida{
-		width: 100%;
-	}
-
-	#formRegistro{
-		width: 100%;
-	}
-
-	.logoNavImg{
-		display: none;
-	}
-}
-
-@media screen and (max-width: 630px) {
-	#contenedor{
-		width: 100%;
-	}
-
-	body{
-		padding-top: 111px;
-	}
-
-	#logoNav{
-		background-color: #8D0800;
-	}
-
-	header{
-		display: block;
-		position: fixed;
-		background-color: rgba(141, 8, 0, 0.3);
-		width: 100%;
-		top: 0px;
-		z-index: 2000;
-	}
-
-	#logoNav p{
-		font-size: 32px;
-		background-color: rgba(141, 8, 0, 0.3);
-	}
-
-	nav{
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: flex-start;
-		align-content: flex-start;
-		width: 80%;
-		height: 100%;
-		position: fixed;
-		left: -100%;
-	}
-
-	.contenedorNav{
-		width: 100%;
-		flex-direction: column;
-		flex-wrap: nowrap;
-		justify-content: flex-start;
-		align-items: flex-start; 
-		align-content: flex-start;
-	}
-
-	.contenedorLogin{
-		width: 100%;
-		flex-direction: column;
-		flex-wrap: nowrap;
-		justify-content: flex-start;
-		align-items: flex-start; 
-		align-content: flex-start;
-	}
-
-	.contenedorNav a, .contenedorLogin a{
-		text-align: left;
-		width: 100%;
-		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-	}
-	
-	.menu{
-		display: inline-block;
-		width: 100%;
-		padding: 5px;
-		margin: auto;
-		background-color: black;
-	}
-
-	.menu span{
-		font-size: 32px;
-		color: #8D0800;
-		padding: 5px;
-	}
-
-	.menu .icon{
-		float: right;
-	}
-}
 
